--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ go-to{
   color: blue;
 }
 
+a.continue{
+  cursor: pointer; cursor: hand;
+  color: blue;
+}
+
 body{
   font-family: Ubuntu, sans-serif;
   color: #535353;
