--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ a.continue{
 }
 
 body{
-  font-family: Ubuntu, sans-serif;
+  font-family: Arial;
   color: #535353;
 }
 
@@ -53,7 +53,7 @@ p{
   margin: 40px;
   margin-top: 0px;
   margin-bottom: 10px;
-  font-size: 200%
+  font-size: 130%
 }
 
 .illustration{
@@ -67,7 +67,7 @@ p{
   width:1600px;
   height:1600px;
   font-size:30px;
-  font-family: Helvetica;
+  font-family: Arial;
   font-size: 28px;
   float:left;
 }
