--- a/style.css
+++ b/style.css
@@ -20,11 +20,20 @@
 go-to{
   cursor: pointer; cursor: hand;
   color: #628dee;
+  font-size: 150%;
+  float:right;
+}
+
+go-to-choice{
+  cursor: pointer; cursor: hand;
+  color: #628dee;
+  font-size: 150%;
 }
 
 a.continue{
   cursor: pointer; cursor: hand;
   color: #628dee;
+  float:right;
 }
 
 body{
