move next buttons to lower right

--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@ a.continue{
   color: #628dee;
   float:right;
 }
+.continue{
+  position:absolute;
+  bottom:0;
+  right:0;
+}
 
 body{
   font-family: Arial;
@@ -49,6 +54,7 @@ body{
 }
 
 .text{
+  position:relative;
   background-image: url('images/doodle.png');
   background-repeat: no-repeat;
   background-position: right bottom;
