Added Title and Subtitle

--- a/style.css
+++ b/style.css
@@ -23,6 +23,22 @@ go-to{
   font-size: 150%;
 }
 
+h1 {
+  font-family: Arial;
+  color: #535353;
+  font-size:1200%;
+  white-space:nowrap;
+  text-align: Center;
+}
+
+h2 {
+  font-family: Arial;
+  color: #535353;
+  font-size:400%;
+  white-space:nowrap;
+  text-align: Center;
+}
+
 a.continue{
   cursor: pointer; cursor: hand;
   color: #628dee;
