--- a/style.css
+++ b/style.css
@@ -20,11 +20,11 @@
 go-to{
   cursor: pointer; cursor: hand;
   color: #628dee;
-  font-size: 150%;
+  font-size: 120%;
 }
 
 h1 {
-  font-family: Arial;
+  font-family: 'Ubuntu', sans-serif;
   color: #535353;
   font-size:1200%;
   white-space:nowrap;
@@ -32,7 +32,7 @@ h1 {
 }
 
 h2 {
-  font-family: Arial;
+  font-family: 'Ubuntu', sans-serif;
   color: #535353;
   font-size:400%;
   white-space:nowrap;
@@ -51,7 +51,7 @@ a.continue{
 }
 
 body{
-  font-family: Arial;
+  font-family: 'Ubuntu', sans-serif;
   color: #535353;
 }
 
@@ -63,6 +63,7 @@ body{
 }
 
 .text{
+  font-family: 'Ubuntu', sans-serif;
   position:relative;
   background-image: url('images/doodle.png');
   background-repeat: no-repeat;
@@ -74,10 +75,11 @@ body{
 }
 
 p{
+  font-family: 'Ubuntu', sans-serif;
   margin: 40px;
   margin-top: 0px;
   margin-bottom: 10px;
-  font-size: 130%
+  font-size: 150%
 }
 
 .illustration{
@@ -91,7 +93,7 @@ p{
   width:1600px;
   height:1600px;
   font-size:30px;
-  font-family: Arial;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 28px;
   float:left;
 }
